# eshop-autotests

./: .env.sample  .gitignore  .pylintrc  README.md  conftest.py  docker-compose.yml  pyproject.toml  test_cart.py  test_common.py  test_homepage.py  test_main.py  test_product.py
docs/: index.html
docs/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
docs/data/attachments/: 3c3e0b59b8ec0826.txt
docs/data/test-cases/: 1e6bb6a1de0cecf3.json  26cd8d02fd28117f.json  3d1bc8742ee1a8ee.json  43fe5394ce71d71c.json  539d43ee93b8f9cf.json  8681bb54e5687b99.json  a43a7c1c600e2c66.json  abd7ec87b7fefb16.json  de9bf3557303972c.json  fe27a774ba7b8080.json
docs/export/: influxDbData.txt  prometheusData.txt
docs/history/: history.json
docs/widgets/: behaviors.json  duration-trend.json  duration.json  environment.json  severity.json  suites.json  summary.json
pages/: base.py  base_page.py  cart.py  cart_page.py  home.py  home_page.py  product.py  product_page.py  search.py  search_page.py
shared/: assert_helper.py  constants.py  utils.py
