[project]
name = "eshop-autotests"
version = "0.1.0"
description = ""
authors = [
    {name = "alexey-ryabkov",email = "xelaris@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-playwright (>=0.7.0,<0.8.0)",
    "allure-pytest (>=2.14.3,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
